CommercialApp/objects/Product_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dosage_Factor__c</fullName>
        <label>Dosage Factor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <label>Product Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level__c</fullName>
        <label>Product Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Normalised_Name__c</fullName>
        <label>Product Normalised Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Product_Code__c</fullName>
        <label>Source Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Product_Description__c</fullName>
        <label>Source Product Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Product Hierarchy</label>
    <nameField>
        <label>Product Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>